# proofpoint_itm

./: .env.example  .gitignore  Makefile  README.md  TESTING_STRATEGY.md  pyproject.toml  pytest.ini  setup.py
docs/source/: api.rst  conf.py  index.rst  modules.rst  proofpoint_itm.rst
sample_scripts/: get_activity.py  get_dictionaries.py  get_endpoints.py  get_endpoints_csv.py  get_endpoints_json.py  migrate_test.py  names.txt  settings.json  update_condition.py  update_policy.py
src/proofpoint_itm/: __init__.py  auth.py  classes.py  client.py  predicate.py  proofpoint_itm.py  webclient.py
src/proofpoint_itm/models/: identity.py
tests/: README.md  conftest.py  test_client_endpoints.py  test_client_errors.py  test_client_init.py  test_client_predicates.py  test_client_rules.py  test_client_search.py  test_client_tags.py  test_client_workflow.py
tests/integration/: test_integration.py
